<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="notification"
        android:enabled="true"
        android:icon="@drawable/notification"
        android:shortcutShortLabel="@string/notificaciones"
        android:shortcutLongLabel="@string/shortcut_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.daviddf.geeklabtest"
            android:targetClass="com.daviddf.geeklab.MainActivity"
            android:data="geeklab://notification" />
    </shortcut>

    <shortcut
        android:shortcutId="functions"
        android:enabled="true"
        android:icon="@drawable/ic_code"
        android:shortcutShortLabel="@string/title_functions"
        android:shortcutLongLabel="@string/title_functions">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.daviddf.geeklabtest"
            android:targetClass="com.daviddf.geeklab.MainActivity"
            android:data="https://geeklab.d4viddf.com/functions" />
    </shortcut>
    <shortcut
        android:shortcutId="apps"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/apps_title"
        android:shortcutLongLabel="@string/apps_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.daviddf.geeklabtest"
            android:targetClass="com.daviddf.geeklab.MainActivity"
            android:data="https://geeklab.d4viddf.com/apps" />
    </shortcut>
</shortcuts>