<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loop_widg"
    android:layout_width="110dp"
    android:layout_height="110dp"
    android:layout_margin="10dp"
    android:elevation="5dp">

    <RelativeLayout
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            android:src="@drawable/bg_wid"
            android:contentDescription="@string/loop_fono" />

        <ImageView
            android:id="@+id/img3"
            android:layout_centerInParent="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/loop"
            android:contentDescription="@string/loop_logo" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/loop"
        android:textAllCaps="false"

        android:textColor="@color/colorAccent"
        android:textSize="12sp" />
</RelativeLayout>