<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Consentimiento">

    <ImageView
        android:id="@+id/attention"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/aviso"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/advertencia" />
    <TextView
        android:id="@+id/aviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/attention"
        android:text="@string/aviso"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aviso"
        android:paddingTop="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/mensaje1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/mensaje2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mensaje"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="@string/mensaje2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_above="@id/aceptar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/salir"
        android:textSize="18sp"
        app:cornerRadius="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/aceptar"
        style="@style/Widget.Material3.Button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:elevation="5dp"
        android:text="@string/aceptar"
        android:textSize="18sp"
        app:cornerRadius="12dp" />
</RelativeLayout>
