<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.utilities.DashboardFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/camphorpro_medium"
        android:gravity="center"
        android:text="@string/menu"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAppearance="@style/MaterialAlertDialog.Material3.Body.Text" />

    <ScrollView
        style="@android:style/Widget.Material.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/not"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/notification"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/notification"
                app:iconGravity="end"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/developer"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/not"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/space_menu"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/developer_options"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_code"
                app:iconGravity="end"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/band"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/developer"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/space_menu"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/band_selector"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/signal"
                app:iconGravity="end"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hdr"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/band"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/space_menu"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/hdr_enhance"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/hdr"
                app:iconGravity="end"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/velo"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hdr"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/space_menu"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/improve_speed_connection"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/speed"
                app:iconGravity="end"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/accounts"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/velo"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/space_menu"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/multiaccount"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/account"
                app:iconGravity="end"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/usage"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/accounts"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/space_menu"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/data_usage"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/data"
                app:iconGravity="end"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rendimiento"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usage"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/space_menu"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/performance_mode"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/memory"
                app:iconGravity="end"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/qcolor"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rendimiento"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/space_menu"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/qcolor"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/color"
                app:iconGravity="end"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fp_monitor"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/qcolor"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/space_menu"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/framerate_monitor"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_baseline_60fps_select_24"
                app:iconGravity="end"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loop"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fp_monitor"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/space_menu"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="@dimen/space_menu"
                android:elevation="5dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/memory_loop"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/loop"
                app:iconGravity="end"
                app:iconSize="30dp" />

        </RelativeLayout>


    </ScrollView>
</LinearLayout>